testing secondary branch

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <title>lab4backend</title>
 </head>
 <body>
-    <h1>Heroku is working?</h1>
+    <h1>Heroku is working? Testing github</h1>
 </body>
 </html>
