Changed text in html

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>lab4backend</title>
 </head>
 <body>
-    <h1>yay, Heroku is working!</h1>
+    <h1>Yay, Heroku is working!</h1>
     <h2>Current branch: dev</h2>
 </body>
 </html>
