Changed text in html

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>lab4backend</title>
 </head>
 <body>
-    <h1>Heroku is working? Testing github</h1>
+    <h1>Yay, Heroku is working!</h1>
+    <h2>Current branch: master</h2>
 </body>
 </html>
