--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lab4backend</title>
+    <style>
+        h1, h2 {
+            padding-left: 30px;
+        }
+    </style>
 </head>
 <body>
     <h1>Yay, Heroku is working!</h1>
